@@ -1,4 +1,5 @@
   * Chests render more correctly now
+  * Updated Silverfish block to process its data values correctly
 
 Minecraft X-Ray 3.3.1 (2011.09.14)
 
